# most_info_frame_extractor

./: .gitignore  ADVANCED_USAGE.md  CONTRIBUTING.md  LIBRARY.md  README.md  publish.bat  pyproject.toml
deliver/: Dockerfile  main.py  requirements.txt
distributed_computing/: FLOW_V1.md  OBSTACLES.md
experiments/: 32_rename_by_reading_logs.ipynb  33_add_chat_with_extracted_frames.ipynb  34_add_chat_with_extracted_pdf.ipynb  34_test_loading_from_chroma_db.ipynb  35_check_len.ipynb  36_delete_empty_directories.ipynb  37_find_duplicates.ipynb  38_human_made_reference_pdfs.ipynb  39_result_pdfs.ipynb  40_human_reference_timestamps.ipynb  exp_15_parallel_comp.ipynb
experiments/38/: long_videos.csv  short_videos.csv
experiments/40/: report.csv
scripts/: plot_char_counts.py
src/video2pdf/: __init__.py  __main__.py  main.py  requirements.txt
src/ytvideo2pdf/: __init__.py  __main__.py  api.py  enums.py  main.py
tests/: test_helper.py
v2/: .dockerignore  .gcloudignore  Dockerfile  app.py  directory_manager.py  gcp_config.py  global_config.py  helper.py  input_strategy_factory.py  k_transactions_extraction_strategy.py  local_video_input_strategy.py  main.py  ocr_strategy_factory.py  processed_frame.py  proxy_config.py  repomix-output.txt  requirements.txt  segments_input_strategy.py  time_elapsed_logger.py  video_processor.py  youtube_video_url_input_strategy.py  yt_down.py
v2/delivery/: delivery_strategy.py  delivery_strategy_factory.py  dummy_delivery_strategy.py  (+1 more)
video2pdf/: main.py  requirements.txt
webhook/: gcp_config.py  main.py  requirements.txt
(+74 files in other folders)
