[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ytvideo2pdf"
version = "0.3.2"
authors = [{ name = "Vedant Panchal", email = "vedantpanchal12345@gmail.com" }]
description = "Convert YouTube educational video to crisp PDF notes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "imagehash",
    "matplotlib",
    "numpy",
    "opencv-python",
    "decord",
    "pandas",
    "pillow",
    "pytesseract",
    "pytubefix",
    "sanitize-filename",
    "scipy",
    "tqdm",
    "typer",
]

[project.optional-dependencies]
easyocr = ["easyocr"]
paddleocr = ["paddleocr", "paddlepaddle"]

[project.scripts]
ytvideo2pdf = "ytvideo2pdf.main:app"

[project.urls]
Homepage = "https://github.com/DeveloperDowny/most_info_frame_extractor"
Issues = "https://github.com/DeveloperDowny/most_info_frame_extractor/issues"
